results/SVCOMP/conversational/log-boolean2-2024_03_08_20_20_39.txt
import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:9: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires b == true || b == false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !\result;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !\result;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/boolean2.java:5:) in method f
        return !b;
        ^
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/boolean2.java:7:
    //@ ensures \result == !\result;
        ^
2 verification failures

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !\result;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !\result;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/boolean2.java:5:) in method f
        return !b;
        ^
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/boolean2.java:7:
    //@ ensures \result == !\result;
        ^
2 verification failures

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true || false;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

